added signup as well as made ui for login page look so clane
