# Microservices/AuthService/build/swagger.json
@@ -82,6 +82,25 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"NewUser": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -189,6 +208,41 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/auth/signup": {
+			"post": {
+				"operationId": "Signup",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Authenticated"
+								}
+							}
+						}
+					},
+					"201": {
+						"description": "user successfully signed up"
+					},
+					"409": {
+						"description": "Email already associated"
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/NewUser"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
